pip install line addition
just straight install no need venv

--- a/notebook/main_experiment.ipynb
+++ b/notebook/main_experiment.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "d0e1bb51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install contextily geopandas matplotlib numpy pandas pyproj scikit_learn"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "c60983ad",
    "metadata": {},
